solve captcha and verified otp problem

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -130,3 +130,9 @@ button:hover:disabled {
   left: 0;
   opacity: 0.4;
 }
+
+.timer {
+  font-size: 15px;
+  font-weight: 400;
+  letter-spacing: 0.8px;
+}
